--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_conflicthandlingdetails.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_conflicthandlingdetails.html
@@ -22,6 +22,30 @@
     </li>
 </ul>
 
+<div class="jumbotron text-center">
+    <h1>Conflictplace</h1>
+    <p th:text="${articleName}">Artikelname</p>
+</div>
+
+<div class="container">
+    <div class="form-group">
+        <label>Owning Person</label>
+        <input class="form-control" th:placeholder="${owningPerson}" type="text" readonly>
+        <label>Person who borrowed</label>
+        <input class="form-control" th:placeholder="${borrowwPerson}" type="text" readonly>
+        <label>Lending ID</label>
+        <input class="form-control" th:placeholder="${lendingID}" type="text" readonly>
+    </div>
+    <form method="post">
+        <div class="form-group">
+            <div class="float-right">
+                <button type="submit" name="action" value="back" class="btn btn-light">back</button>
+                <button type="submit" name="action" value="winBorrower" class="btn btn-danger">mark as solved for Borrower</button>
+                <button type="submit" name="action" value="winOwner" class="btn btn-success">mark as solved for Owner</button>
+            </div>
+        </div>
+    </form>
+</div>
 
 </body>
 </html>
