--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <title >Sind sie sicher?</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
+      xmlns:layout="http://www.w3.org/1999/xhtml" >
+<head></head>
 
 <body>
-    <div class="container">
+<div class="container" layout:fragment="content" style="margin-top: 50px">
         <form method="post" th:object="${article}">
             <h1 th:text="${article.getName()}">SampleName</h1>
             <table>
