--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
+      xmlns:layout="http://www.w3.org/1999/xhtml" >
 
 <head>
-    <meta charset="UTF-8">
-    <title>Rhinoshare</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <div class="container">
+<div class="container" layout:fragment="content" style="margin-top: 50px">
         <h1 class="display-3">Übersicht</h1>
         <div class="row mb-2">
             <div class="col-md-6"  th:each="article:${articles}">
