--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/sellRequest.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/sellRequest.html
@@ -9,15 +9,11 @@
 <body>
 <form th:action="@{/inquiry}" method="post">
     <label>
-        from :
-        <input type="date" name="startDate">
-        till :
-        <input type="date" name="endDate">
         why do you think you should get it :
         <input type="text" name="requestComment">
         <input type="hidden" name="requesterID" th:value="${requesterID}">
         <input type="hidden" name="articleID" th:value="${articleID}">
-        <input type="hidden" name="requestValue" value="lending">
+        <input type="hidden" name="requestValue" value="selling">
     </label>
     <button type="submit">submit</button>
 </form>
