--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_articlemanagement.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_articlemanagement.html
@@ -2,7 +2,7 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Benutzerverwaltung - Rhinoshare</title>
+    <title>Artikelverwaltung - Rhinoshare</title>
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
     <link rel="icon" href="/img/RhinoLogoSmall.png">
 </head>
