--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_conflicthandling.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_conflicthandling.html
@@ -2,7 +2,7 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Benutzerverwaltung - Rhinoshare</title>
+    <title>Konfliktlösung - Rhinoshare</title>
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
     <link rel="icon" href="/img/RhinoLogoSmall.png">
 </head>
@@ -36,23 +36,18 @@
                 <td th:text="${lending.lendingPerson.username}"/>
                 <td th:text="${lending.lendedArticle.owner.username}"/>
                 <td>
-                    <a th:href="|/admin/conflicthandling/showcase/${lending.lendingID}|">
-                        <button class="button_std">Details</button>
-                    </a>
+                    <form method="post" th:action="|/admin/conflicthandling/showcase/${lending.lendingID}|">
+                        <button type="submit" name="action" value="winBorrower" class="button_std_red">
+                            Lösen zugunsten des Ausleihers
+                        </button>
+                        <button type="submit" name="action" value="winOwner" class="button_std_green">
+                            Lösen zugunsten des Besitzers
+                        </button>
+                    </form>
                 </td>
             </tr>
         </th:block>
-
-
     </table>
-    <div class="align-right">
-        <form method="post">
-            <div class="form-group">
-                <input th:name="lendingID" type="number" min="0" required="required" />
-                <button type="submit" value="show" class="btn" name="action">show conflict</button>
-            </div>
-        </form>
-    </div>
 
 </div>
 </body>
