--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_usermanagement.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_usermanagement.html
@@ -41,7 +41,12 @@
             <td th:text="${user.username}">...</td>
             <td th:text="${user.email}">...</td>
             <td th:text="${user.score}">...</td>
-            <td th:text="${user.role}">...</td>
+            <td th:if="${user.role == 'ROLE_ADMIN'}">
+                <label class="red_marked">Admin</label>
+            </td>
+            <td th:if="${user.role == 'ROLE_USER'}">
+                <label class="green_marked">User</label>
+            </td>
             <td>
                 <a th:href="|/admin/usermanagement/edit/${user.getUserID()}|">
                     <button class="button_std_white">Bearbeiten</button>
