--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/error/lended.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/error/lended.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<h1>Da ist etwas schiefgelaufen. Der Artikel ist derzeit Verliehen. Bekomm ihn erstmal wieder!</h1>
+<h1>Der Artikel ist derzeit verliehen oder nicht verfügbar.</h1>
 <h2>Wir arbeiten daran.</h2>
 <a th:href="|/article/|"> <button class="btn btn-warning" type="button">Zurück zur Übersicht</button></a>
 </body>
