--- a/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
@@ -6,9 +6,10 @@
 /*Title*/
 
 #titleImage {
+    margin-top: 6px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 6px;
+    margin-bottom: 6px;
 }
 
 #loginform {
@@ -295,7 +296,8 @@ th, td {
 
     list-style-type: none;
     border-radius: 7px;
-    margin: 0;
+    margin-left: 6px;
+    margin-right: 6px;
     padding: 0;
     overflow: hidden;
     background-color: #e0e0e0;
@@ -303,6 +305,32 @@ th, td {
 
 .navbaritem {
     float: left;
+}
+
+
+.searchbar {
+    float: right;
+    padding: 6px;
+    border: none;
+    width: 300px;
+    height: 37px;
+    margin-top: 6px;
+    font-size: 17px;
+    border-bottom-left-radius: 7px;
+    border-top-left-radius: 7px;
+}
+
+#searchbutton {
+    margin-top: 6px;
+    margin-right: 10px;
+    height: 37px;
+    border-style: none;
+    border-bottom-right-radius: 7px;
+    border-top-right-radius: 7px;
+}
+
+#searchbutton:hover {
+    background: #0b7dda;
 }
 
 .navbaritem a {
@@ -412,4 +440,67 @@ th, td {
     border: 1px solid #bf3732;
     background-color: #bf3732;
     border-radius: 4px;
+}
+
+body {
+    font-family: Geneva;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: rgba(16, 146, 237, 0.51);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
