--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -5,40 +5,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Rhinoshare</title>
         <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="icon" href="/img/RhinoLogoSmall.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
-        <img id="titleImageTest" src="/img/rhinoLogoBig.png" width="300" height="75">
-        <ul class="navigationbar">
+        <img id="titleImage" src="/img/rhinoLogoBig.png" width="300" height="75">
+
+        <ol class="navigationbar">
             <li class="navbaritem"><a class="active" href="/">Rhino-Übersicht</a></li>
-            <li class="navbaritem"><a href="/">News</a></li>
             <li class="navbaritem"><a href="/article/">Artikel</a></li>
-            <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
-                <a th:href="@{'/article/view/' + ${id}}">Meine Artikel</a>
+
             <li class="navbaritem"><a th:href="|/${username}|">Ausleihen</a></li>
-            <li class="navbaritem"><a href="">Contact</a></li>
-            <li class="navbaritem" href th:if="${loggedIn == 'false'}">
-                <a href="/newaccount">Registrieren</a>
-            </li>
-            <li class="navbaritem" href th:if="${loggedIn == 'true'}">
-                <a href="/edit" th:text="${surname}">Benutzer</a>
-            </li>
-            <form method="get" action="/article/search">
-                <li class="navbaritem">
-                    <input class="navbaritem" type="search" name="query" id="globalSearchField" placeholder="Wonach suchen sie?">
-                </li>
-                <li class="navbaritem"><a href="/">Suchen</a></li>
-            </form>
+
+
             <li style="float: right;" class="navbaritem" href th:if="${loggedIn == 'false'}">
                 <a href="/login">Einloggen</a>
             </li>
             <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
                 <a href="/logout">Ausloggen</a>
             </li>
-        </ul>
+            <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'false'}">
+                <a href="/newaccount">Registrieren</a>
+            </li>
+            <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
+                <div class="dropdown">
+                    <a href="/edit" th:text="${surname}" class="dropbtn">Benutzer</a>
+                    <div class="dropdown-content">
+                        <a href="/edit">Konto bearbeiten</a>
+                        <a href="/article/view">Meine Artikel</a>
+                        <a href="#">Meine Ausleihen</a>
+                    </div>
+                </div>
+            </li>
+            <form method="get" action="/article/search">
+                <li style="float: right" class="navbaritem">
+                    <button id="searchbutton" type="submit">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                </li>
+                <li style="float: right" class="navbaritem">
+                    <input class="searchbar" type="search" name="query" id="globalSearchField" placeholder="Wonach suchen sie?">
+                </li>
+            </form>
+        </ol>
     </body>
 
     <div>
