--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/loginpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/loginpage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <a href="/">
-    <img id="titleImage" src="/img/rhinoLogoBig.png" width="300" height="75">
+    <img id="titleImage_login" src="/img/rhinoLogoBig.png" width="300" height="75">
 </a>
 <div id="loginform" th:fragment="content">
     <p id="logintitle">Anmelden</p>
