--- a/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
@@ -142,7 +142,7 @@
     transition-duration: 0.4s;
 }
 
-.button_std {
+.button_std, .contentFragment .button_std {
     font-family: Geneva;
     background-color: #1092ed;
     border: none;
@@ -160,7 +160,7 @@
     transition-duration: 0.4s;
 }
 
-.button_std_white {
+.button_std_white, .contentFragment .button_std_white {
     font-family: Geneva;
     background-color: #cdcdcd;
     border: none;
@@ -215,6 +215,14 @@
 }
 
 .button:hover, .button_std:hover, .button_std_white:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.contentFragment .button_std:hover, .contentFragment .button_std:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.contentFragment .button_std_white:hover, .contentFragment .button_std_white:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -488,6 +496,7 @@ body {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    border-radius: 7px;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -508,4 +517,38 @@ body {
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+/*Content in fragments*/
+
+.contentFragment .container {
+    margin: auto;
+    width: 60%;
+    padding: 10px;
+}
+
+.contentFragment table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.contentFragment th, .contentFragment td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.contentFragment tr:hover {background-color:#f5f5f5;}
+
+.contentFragment input[type=text], .contentFragment input[type=number], select {
+    font-family: Geneva;
+    font-size: 18px;
+    width: 90%;
+    padding: 6px 10px;
+    margin-left: 20px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    height: 40px;
 }
