--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -52,7 +52,7 @@
         </ol>
     </body>
 
-    <div>
+    <div class="contentFragment">
         <div layout:fragment="content">
             Content goes here
         </div>
