--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/newArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/newArticle.html
@@ -32,19 +32,20 @@
             </tr>
             <tr>
                 <th scope="row">Bild zum hochladen auswählen:</th>
-                <td> <Input th:field="*{file}" type="file"/> </td>
+                <td>
+                    <Input th:field="*{file}" type="file"/> </td>
             </tr>
             <tr>
                 <th scope="row">Verfügbar?</th>
-                <td> <Input type="checkbox" th:field="*{available}"/> </td>
+                <td> <Input class="checkmark" type="checkbox" th:field="*{available}"/> </td>
             </tr>
             <tr>
                 <th scope="row">Zum Verkauf?</th>
-                <td> <Input type="checkbox" th:field="*{forSale}"/> </td>
+                <td> <Input class="checkmark" type="checkbox" th:field="*{forSale}"/> </td>
             </tr>
             <th scope="row"></th>
-            <td><button type="submit" class="btn btn-primary">Neuen Artikel anlegen</button></td>
-            <td><a th:href="|/article/|"><button class="btn btn-warning" type="button">Abbrechen</button></a></td>
+            <td><button type="submit" class="button_std">Neuen Artikel anlegen</button></td>
+            <td><a th:href="|/article/|"><button class="button_std_white" type="button">Abbrechen</button></a></td>
         </table>
     </form>
 </div>
