--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <img id="titleImage" src="/img/rhinoLogoBig.png" width="300" height="75">
+        <img id="titleImage" src="/img/rhinoLogoBig_share.png" width="300" height="75">
 
         <ol class="navigationbar">
             <li class="navbaritem"><a class="active" href="/">Rhino-Übersicht</a></li>
@@ -46,7 +46,7 @@
                     </button>
                 </li>
                 <li style="float: right" class="navbaritem">
-                    <input class="searchbar" type="search" name="query" id="globalSearchField" placeholder="Wonach suchen sie?">
+                    <input class="searchbar" type="search" name="query" id="globalSearchField" placeholder="Suchen...">
                 </li>
             </form>
         </ol>
