--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewAll.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewAll.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.w3.org/1999/xhtml" >
 
 <head>
-    <title>RHINOSHARE</title>
+    <title>Ausleihen - Rhinoshare </title>
 </head>
 
 <body>
