--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/inquiry.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/inquiry.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
+      xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">    <meta charset="UTF-8">
     <title>Inquiry</title>
 </head>
 <body>
-<h>Your request is being processed</h>
-<dr>
-<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
-</dr>
+<div class="container" layout:fragment="content" style="margin-top: 50px">
+
+    <h>Your request is being processed</h>
+    <dr>
+        <a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
+    </dr>
+</div>
+
 </body>
 </html>
