--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
+      xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">    <meta charset="UTF-8">
     <title>Overview</title>
 </head>
 <body>
-<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
-<div>
-    Your ProPay Account
-    <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
+<div class="container" layout:fragment="content" style="margin-top: 50px">
+
+    <a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
+    <div>
+        Your ProPay Account
+        <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
         padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
-        <div th:text="${account.account}">0</div>
-        Your ProPay Money:
-        <div th:text="${account.amount}">0</div>
-        Your Reservations
-        <table th:each="reservation : ${account.reservations}">
-            <div>Reservation costs:
-            <div th:text="${reservation.amount}">0</div>
-            </div>
-        </table>
+            <div th:text="${account.account}">0</div>
+            Your ProPay Money:
+            <div th:text="${account.amount}">0</div>
+            Your Reservations
+            <table th:each="reservation : ${account.reservations}">
+                <div>Reservation costs:
+                    <div th:text="${reservation.amount}">0</div>
+                </div>
+            </table>
+        </div>
+        <form th:action="@{/proPay/{username}(username = ${username})}" method="post">
+            <label>
+                how much € will you transfer to your ProPay Account
+                <input type="number" name="amount">
+            </label>
+            <button type="submit">submit</button>
+        </form>
     </div>
-    <form th:action="@{/proPay/{username}(username = ${username})}" method="post">
-        <label>
-            how much € will you transfer to your ProPay Account
-            <input type="number" name="amount">
-        </label>
-        <button type="submit">submit</button>
-    </form>
 </div>
 
 </body>
